--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    color: white;
   }
   .subscribe-form {
     width: 100%;
