--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     margin-top: 30px;
   }
   .subtitle {
-    font-size: 60px;
+    font-size: 80px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -50,6 +50,7 @@
     position: absolute;
     bottom: 0;
     text-align: center;
+    color: black;
   }
   form {
     margin-top: 10px;
