--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     padding: 20px;
   }
   .title {
-    font-size: 48px;
-    text-align: left;
-    margin-top: 30px;
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 30px;
   }
   .subtitle {
-    font-size: 80px;
+    font-size: 60px;
     position: absolute;
-    top: 50%;
+    top: 5%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
