--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   .subtitle {
     font-size: 48px;
     position: absolute;
-    top: 15%;
-    left: 20%;
+    top: 15px;
+    left: 30px;
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
