--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   .title {
     font-size: 24px;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 35px;
+    right: 400px;
+    color: white;
   }
   .subtitle {
     font-size: 48px;
@@ -84,11 +86,11 @@
 
 <div class="bg-image">
   <div class="subtitle">Empowering Businesses with AI</div>
-<!--
+
   <div class="content">
     <div class="title">SoundMinds.ai</div>
   </div>
-  -->
+  
 </div>
 <div class="subscribe-form">
   <h2>Subscribe for updates</h2>
