--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   }
   .title {
     font-size: 24px;
-    text-align: center;
-    margin-bottom: 35px;
+    text-align: right;
     right: 400px;
+    bottom: 200px;
     color: white;
   }
   .subtitle {
