--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   .title {
     font-size: 24px;
     text-align: right;
+    position: absolute;
     right: 400px;
     bottom: 200px;
     color: white;
@@ -88,7 +89,7 @@
   <div class="subtitle">Empowering Businesses with AI</div>
 
   <div class="content">
-    <div class="title">SoundMinds.ai</div>
+    <div class="title">SoundMinds.aii</div>
   </div>
   
 </div>
