--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="subtitle">Empowering Businesses with AI</div>
 
   <div class="content">
-    <div class="title">SoundMinds.aii</div>
+    <div class="title">SoundMinds.ai</div>
   </div>
   
 </div>
