--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     position: absolute;
     right: 100px;
     bottom: 100px;
-    color: white;
+    color: blue;
   }
   .subtitle {
     font-size: 48px;
