--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     text-align: right;
     position: absolute;
     right: 100px;
-    bottom: 100px;
-    color: blue;
+    bottom: 150px;
+    color: white;
+    font-family: fantasy;
   }
   .subtitle {
     font-size: 48px;
