--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     text-align: right;
     position: absolute;
     right: 100px;
-    bottom: 150px;
+    bottom: 120px;
     color: white;
     font-family: fantasy;
   }
@@ -90,7 +90,7 @@
   <div class="subtitle">Empowering Businesses with AI</div>
 
   <div class="content">
-    <div class="title">SoundMinds.ai</div>
+    <div class="title">SOUNDMINDS.AI</div>
   </div>
   
 </div>
