--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     top: 45px;
     left: 375px;
     transform: translate(-50%, -50%);
-    text-align: center;
+    text-align: left;
     color: white;
   }
   .subscribe-form {
