added post from subscribe form to zapier

--- a/index.html
+++ b/index.html
@@ -96,10 +96,15 @@
 </div>
 <div class="subscribe-form">
   <h2>Subscribe for updates</h2>
-  <form id="subscription-form" onsubmit="submitForm(event)">
-    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+  <form id="subscription-form" action="https://hooks.zapier.com/hooks/catch/18667129/376gq8h/" method="POST">
+    <input type="email" name="email" id="email" placeholder="Enter your email" required>
     <input type="submit" value="Subscribe">
   </form>
+
+  <!-- <form id="subscription-form" onsubmit="submitForm(event)">
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+    <input type="submit" value="Subscribe">
+  </form> -->
 </div>
 
 </body>
