added signup message

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 </div>
 <div class="subscribe-form">
   <h2>Subscribe for updates</h2>
+  <p>Sign up to to receive updates from SoundMinds.ai</p>
   <form id="subscription-form" action="https://hooks.zapier.com/hooks/catch/18667129/376gq8h/" method="POST">
     <input type="email" name="email" id="email" placeholder="Enter your email" required>
     <input type="submit" value="Subscribe">
