--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
   }
   .subscribe-form {
     width: 100%;
-    padding: 20px;
+    padding: 5px;
     box-sizing: border-box;
-    background-color: #f2f2f2;
+    background-color: #060606;
     position: absolute;
     bottom: 0;
     text-align: center;
     color: black;
   }
   form {
-    margin-top: 10px;
+    margin-top: 5px;
   }
   input[type=email], input[type=submit] {
     padding: 10px;
