--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
-    background-color: #060606;
+    background-color: #f2f2f2;
     position: absolute;
     bottom: 0;
     text-align: center;
