--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="subtitle">Empowering Businesses with AI</div>
 
   <div class="content">
-    <div class="title">SOUNDMINDS.AI</div>
+    <div class="title">SOUNDMINDS.AI1</div>
   </div>
   
 </div>
