--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
   <div class="subtitle">Empowering Businesses with AI</div>
 
   <div class="content">
-    <div class="title">SOUNDMINDS.AI1</div>
+    <div class="title">SOUNDMINDS.AI</div>
   </div>
   
 </div>
 <div class="subscribe-form">
   <h2>Subscribe for updates</h2>
   <p>Sign up to to receive updates from SoundMinds.ai</p>
-  <form action="${ZAPIER_WEBHOOK_URL}" method="POST">
+  <form action="https://hooks.zapier.com/hooks/catch/18667129/376gq8h" method="POST">
     <input type="email" name="email" placeholder="Enter your email" required>
     <button type="submit">Subscribe</button>
   </form>
