--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
 <div class="subscribe-form">
   <h2>Subscribe for updates</h2>
   <p>Sign up to to receive updates from SoundMinds.ai</p>
-  <form action="https://hooks.zapier.com/hooks/catch/18667129/376gq8h" method="POST">
-    <input type="email" name="email" placeholder="Enter your email" required>
-    <button type="submit">Subscribe</button>
-  </form>
+  <script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+  <zapier-interfaces-page-embed page-id='clvigvbyu000111sapemcp3u7' no-background='false'  style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
 </div>
 
 </body>
