--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     background-color: #45a049;
   }
 </style>
+<script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
 
 </head>
 <body>
@@ -90,8 +91,7 @@
 <div class="subscribe-form">
   <h2>Subscribe for updates</h2>
   <p>Sign up to to receive updates from SoundMinds.ai</p>
-  <script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
-  <zapier-interfaces-page-embed page-id='clvigvbyu000111sapemcp3u7' no-background='false'  style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
+  <zapier-interfaces-page-embed page-id='clvigvbyu000111sapemcp3u7' no-background='false'  style='max-width: 100%; height: 100px;'></zapier-interfaces-page-embed>
 </div>
 
 </body>
