--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="subscribe-form">
   <h2>Subscribe for updates</h2>
   <p>Sign up to to receive updates from SoundMinds.ai</p>
-  <zapier-interfaces-page-embed page-id='clvigvbyu000111sapemcp3u7' no-background='false'  style='max-width: 100%; height: 30px;'></zapier-interfaces-page-embed>
+  <zapier-interfaces-page-embed page-id='clvigvbyu000111sapemcp3u7' no-background='false'></zapier-interfaces-page-embed>
 </div>
 
 </body>
