--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
   
 </div>
 <div class="subscribe-form">
-  <h2>Subscribe for updates</h2>
+  <!--<h2>Subscribe for updates</h2>
   <p>Sign up to to receive updates from SoundMinds.ai</p>
+  -->
   <zapier-interfaces-page-embed page-id='clvigvbyu000111sapemcp3u7' no-background='false'></zapier-interfaces-page-embed>
 </div>
 
