--- a/index.html
+++ b/index.html
@@ -75,6 +75,25 @@
     background-color: #45a049;
   }
 </style>
+<script>
+  // Prevent form submission
+  document.querySelector('form').addEventListener('submit', function(e) {
+    e.preventDefault();
+    var email = e.target.email.value;
+    if (email) {
+      e.target.email.value = '';
+      fetch(e.target.action, {
+        method: 'POST',
+        body: new URLSearchParams({ email: email }),
+        headers: {
+          'Content-Type': 'application/x-www-form-urlencoded',
+        },
+      });
+      alert('Thank you for subscribing!');
+    }
+  });
+</script>
+
 
 </head>
 <body>
