--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <input type="email" name="email" placeholder="Enter your email" required>
     <button type="submit">Subscribe</button>
   </form>
-  -ttt-ttt
+  -ttt-ttt-ttt
 </div>
 
 </body>
