adding Demos page with a hamster demo

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
     });
   });
   </script>
+  <script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "c253d240-7150-437c-bcf1-77bde85ef7c9",
+        apiHost: "http://localhost:3000",
+    })
+</script>
 </head>
 <body>
 
