added total of 20 questions

--- a/demos/hamsterFAQs.html
+++ b/demos/hamsterFAQs.html
@@ -12,6 +12,7 @@
         <h1>Hamster Care Q&A</h1>
         
         <div class="accordion">
+            <!-- Initial 10 Questions and Answers -->
             <div class="item">
                 <input type="checkbox" id="q1">
                 <label for="q1"><i class="fas fa-utensils"></i> What do hamsters eat?</label>
@@ -51,6 +52,128 @@
                     <p>Signs of illness in hamsters include loss of appetite, lethargy, hunched posture, discharge from eyes or nose, and changes in fur appearance. Contact a veterinarian experienced with small pets if you notice any of these symptoms.</p>
                 </div>
             </div>
+
+            <div class="item">
+                <input type="checkbox" id="q6">
+                <label for="q6"><i class="fas fa-home"></i> What kind of cage is best for a hamster?</label>
+                <div class="content">
+                    <p>A spacious cage with solid floors and plenty of ventilation is best. Avoid wire floors as they can hurt a hamster’s feet. Provide ample bedding and hiding spaces.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q7">
+                <label for="q7"><i class="fas fa-clock"></i> How long do hamsters typically live?</label>
+                <div class="content">
+                    <p>Hamsters typically live for about 2 to 3 years, though this can vary based on breed, care, and genetics.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q8">
+                <label for="q8"><i class="fas fa-paw"></i> How can I make my hamster's environment enriching?</label>
+                <div class="content">
+                    <p>Provide a variety of toys, tunnels, and exercise wheels. Regularly change up their environment to keep it interesting. Hiding treats can also provide mental stimulation.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q9">
+                <label for="q9"><i class="fas fa-temperature-high"></i> What temperature is ideal for hamsters?</label>
+                <div class="content">
+                    <p>Hamsters thrive in temperatures between 65-75°F (18-24°C). Avoid placing their cage in direct sunlight or near drafts.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q10">
+                <label for="q10"><i class="fas fa-lightbulb"></i> How much light do hamsters need?</label>
+                <div class="content">
+                    <p>Hamsters do well with a regular light-dark cycle, simulating natural day and night. Avoid bright lights and ensure they have a dark, quiet place to sleep during the day.</p>
+                </div>
+            </div>
+
+            <!-- Additional 10 Questions and Answers -->
+            <div class="item">
+                <input type="checkbox" id="q11">
+                <label for="q11"><i class="fas fa-seedling"></i> Can hamsters eat fresh herbs?</label>
+                <div class="content">
+                    <p>Yes, hamsters can eat fresh herbs like parsley, basil, and cilantro in small amounts. Always introduce new foods gradually to avoid digestive upset.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q12">
+                <label for="q12"><i class="fas fa-syringe"></i> Do hamsters need vaccinations?</label>
+                <div class="content">
+                    <p>No, hamsters do not require vaccinations. However, regular check-ups with a vet experienced in small animals are recommended to ensure they remain healthy.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q13">
+                <label for="q13"><i class="fas fa-bug"></i> How can I prevent mites in my hamster's cage?</label>
+                <div class="content">
+                    <p>Keep the cage clean and dry, and avoid using hay or straw as bedding, as they can harbor mites. If you suspect a mite infestation, consult a vet for appropriate treatment.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q14">
+                <label for="q14"><i class="fas fa-balance-scale"></i> How can I tell if my hamster is overweight?</label>
+                <div class="content">
+                    <p>Check for excess fat around the belly and reduced activity levels. Provide a balanced diet and ensure they have plenty of opportunities for exercise to maintain a healthy weight.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q15">
+                <label for="q15"><i class="fas fa-baby"></i> How can I tell the gender of my hamster?</label>
+                <div class="content">
+                    <p>Male hamsters have larger scent glands and a more prominent rear end due to their testicles. Female hamsters have smaller scent glands and a less pronounced rear end. A vet can also help determine the gender.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q16">
+                <label for="q16"><i class="fas fa-bath"></i> Can hamsters take baths?</label>
+                <div class="content">
+                    <p>Hamsters should not be bathed in water as it can cause stress and health issues. Instead, provide a sand bath for them to roll in and clean their fur naturally.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q17">
+                <label for="q17"><i class="fas fa-drumstick-bite"></i> Can hamsters eat meat?</label>
+                <div class="content">
+                    <p>Hamsters can have small amounts of cooked, unseasoned meat like chicken or turkey as an occasional protein source. Avoid processed meats and ensure it’s free of any additives.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q18">
+                <label for="q18"><i class="fas fa-bed"></i> What kind of bedding is best for hamsters?</label>
+                <div class="content">
+                    <p>Paper-based bedding is recommended as it is absorbent, safe, and comfortable for hamsters. Avoid cedar and pine shavings as they can cause respiratory issues.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q19">
+                <label for="q19"><i class="fas fa-water"></i> How often should I change my hamster's water?</label>
+                <div class="content">
+                    <p>Fresh water should be provided daily. Ensure the water bottle or dish is cleaned regularly to prevent bacteria buildup.</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <input type="checkbox" id="q20">
+                <label for="q20"><i class="fas fa-search"></i> How can I spot signs of aging in my hamster?</label>
+                <div class="content">
+                    <p>Aging hamsters may show signs such as reduced activity, graying fur, weight loss, and changes in eating or drinking habits. Providing a comfortable environment and regular vet check-ups can help manage their health.</p>
+                </div>
+            </div>
+
         </div>
     </div>
     
