removed bot from homepage and added bot to hamsterFAQs page

--- a/demos/hamsterFAQs.html
+++ b/demos/hamsterFAQs.html
@@ -176,6 +176,13 @@
 
         </div>
     </div>
+    <script type="module">
+        import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+        Chatbot.init({
+            chatflowid: "16fdb385-a5b9-40b8-b04b-4325518db2dc",
+            apiHost: "https://flowise.soundminds.ai",
+        })
+    </script>
     
     <script src="script.js"></script>
 </body>
