--- a/index.html
+++ b/index.html
@@ -104,5 +104,35 @@
     </form>
   </div>
 </div>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const form = document.querySelector('.subscribe-form-div form');
+    
+    form.addEventListener('submit', function(event) {
+      event.preventDefault(); // Prevent the default form submission
+
+      // Show a popup confirmation
+      alert('Form submitted successfully!');
+
+      // Optionally, send the form data using AJAX
+      const formData = new FormData(form);
+      fetch(form.action, {
+        method: form.method,
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      }).then(response => {
+        if (response.ok) {
+          console.log('Form submitted successfully');
+        } else {
+          console.error('Form submission failed');
+        }
+      }).catch(error => {
+        console.error('Form submission error:', error);
+      });
+    });
+  });
+</script>
 </body>
 </html>
