--- a/index.html
+++ b/index.html
@@ -1,138 +1,134 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SoundMinds.ai</title>
-<style>
-  body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #333;
-  }
-  .bg-image {
-    background-image: url('image.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    height: calc(100% - 40px);
-  }
-  .content, .subscribe-form h2, form {
-    color: white; /* Set all text color to white */
-    font-weight: bold; /* Make all text bold */
-    text-shadow: 2px 2px 4px #000000;
-  }
-  .content {
-    padding: 20px;
-  }
-  .title {
-    font-size: 24px;
-    text-align: right;
-    position: absolute;
-    right: 70px;
-    bottom: 105px;
-    color: white;
-    font-family: fantasy;
-  }
-  .subtitle {
-    font-size: 48px;
-    position: absolute;
-    top: 45px;
-    left: 375px;
-    transform: translate(-50%, -50%);
-    text-align: left;
-    color: white;
-  }
-  .subscribe-form-div {
-    width: 100%;
-    padding: 5px;
-    box-sizing: border-box;
-    background-color: #f2f2f2;
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    color: black;
-  }
-  .subscribe-form-div form {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end; /* Align items at the bottom */
-    gap: 10px; /* Add some space between the elements */
-  }
-  input[type=email], input[type=submit] {
-    padding: 10px;
-    margin-right: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  .large-textarea {
-    width: 400px;
-    height: 30px;
-  }
-</style>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SoundMinds.ai - Empowering Business with AI Solutions</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="logo-container">
+                <object data="logo-joy-3.svg" type="image/svg+xml" class="logo">
+                    Your browser does not support SVG
+                </object>
+            </div>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#solutions">Solutions</a></li>
+                <li><a href="#technology">Technology</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact" class="cta-button">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<div class="bg-image">
-  <div class="subtitle">Empowering Businesses with AI</div>
+    <main>
+        <section id="home" class="hero">
+            <div class="hero-content">
+                <h1>Empowering Your Business with AI</h1>
+                <p>SoundMinds.ai transforms businesses through cutting-edge AI solutions, driving innovation and growth across industries.</p>
+                <a href="#solutions" class="primary-button">Discover How</a>
+            </div>
+            <div class="hero-image-container">
+                <object data="hero-1.svg" type="image/svg+xml" class="hero-image" id="hero-1">
+                    Your browser does not support SVG
+                </object>
+                <object data="hero-2.svg" type="image/svg+xml" class="hero-image" id="hero-2" style="display: none;">
+                    Your browser does not support SVG
+                </object>
+                <object data="hero-3.svg" type="image/svg+xml" class="hero-image" id="hero-3" style="display: none;">
+                    Your browser does not support SVG
+                </object>
+            </div>
+        </section>
 
-  <div class="content">
-    <div class="title">SOUNDMINDS.AI</div>
-  </div>
-</div>
-<div>
-  <div class="subscribe-form-div">
-    <form action="https://formspree.io/f/mdknwnqa" method="POST">
-      <label for="email">Email: </label>
-      <input type="email" id="email" name="email" required>&nbsp;&nbsp;
-      <label for="message">Message: </label>
-      <textarea id="message" name="message" required class="large-textarea"></textarea>&nbsp;&nbsp;
-      <input type="submit" value="Send">
-    </form>
-  </div>
-</div>
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    const form = document.querySelector('.subscribe-form-div form');
-    
-    form.addEventListener('submit', function(event) {
-      event.preventDefault(); // Prevent the default form submission
+        <section id="solutions" class="solutions">
+            <h2>AI-Powered Business Solutions</h2>
+            <div class="solution-grid">
+                <div class="solution-card">
+                    <i class="fas fa-brain"></i>
+                    <h3>Intelligent Automation</h3>
+                    <p>Streamline operations and boost efficiency with AI-driven automation.</p>
+                </div>
+                <div class="solution-card">
+                    <i class="fas fa-chart-bar"></i>
+                    <h3>Data Analytics</h3>
+                    <p>Transform raw data into actionable business insights.</p>
+                </div>
+                <div class="solution-card">
+                    <i class="fas fa-robot"></i>
+                    <h3>AI Integration</h3>
+                    <p>Seamlessly integrate AI into your existing business processes.</p>
+                </div>
+            </div>
+        </section>
 
-      // Show a popup confirmation
-      alert('Form submitted successfully!');
+        <section id="technology" class="technology">
+            <h2>Our Technology</h2>
+            <div class="tech-content">
+                <div class="tech-description">
+                    <h3>Enterprise-Grade AI Solutions</h3>
+                    <p>We deliver scalable, secure, and customizable AI solutions that drive business growth and innovation. Our technology adapts to your specific industry needs and challenges.</p>
+                    <ul>
+                        <li>Custom AI Solutions</li>
+                        <li>Scalable Cloud Infrastructure</li>
+                        <li>Enterprise Security Standards</li>
+                        <li>Technical Support</li>
+                    </ul>
+                </div>
+                <div class="tech-image">
+                    <object data="tech.svg" type="image/svg+xml" class="tech-visualization">
+                        Your browser does not support SVG
+                    </object>
+                </div>
+            </div>
+        </section>
 
-      // Optionally, send the form data using AJAX
-      const formData = new FormData(form);
-      fetch(form.action, {
-        method: form.method,
-        body: formData,
-        headers: {
-          'Accept': 'application/json'
-        }
-      }).then(response => {
-        if (response.ok) {
-          console.log('Form submitted successfully');
-        } else {
-          console.error('Form submission failed');
-        }
-      }).catch(error => {
-        console.error('Form submission error:', error);
-      });
-    });
-  });
-</script>
+        <section id="contact" class="contact">
+            <h2>Get in Touch</h2>
+            <form class="contact-form" onsubmit="return handleSubmit(event)">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <input type="hidden" name="encrypted_email" id="encrypted_email">
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit" class="primary-button">Send Message</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-logo">
+                <svg width="150" height="38" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Brain circuit representing AI -->
+                    <path d="M40 25C40 33.2843 33.2843 40 25 40C16.7157 40 10 33.2843 10 25C10 16.7157 16.7157 10 25 10C33.2843 10 40 16.7157 40 25Z" stroke="#ffffff" stroke-width="2"/>
+                    <path d="M20 25C20 27.7614 22.2386 30 25 30C27.7614 30 30 27.7614 30 25C30 22.2386 27.7614 20 25 20C22.2386 20 20 22.2386 20 25Z" fill="#ffffff"/>
+                    <path d="M25 10V20M25 30V40M10 25H20M30 25H40" stroke="#ffffff" stroke-width="2"/>
+                    <!-- Company name -->
+                    <text x="50" y="30" font-family="Inter, sans-serif" font-size="20" font-weight="700" fill="#ffffff">
+                        <tspan>Sound</tspan><tspan>Minds</tspan><tspan>.ai</tspan>
+                    </text>
+                </svg>
+            </div>
+            <div class="footer-links">
+                <a href="#home">Home</a>
+                <a href="#solutions">Solutions</a>
+                <a href="#technology">Technology</a>
+                <a href="#about">About</a>
+            </div>
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+            </div>
+            <p>&copy; 2023 SoundMinds.ai. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
